#   # ------------------------------------- #
#   |  ░█▀▀░█▀▀░▀█▀░█░█░█▀█░░░░█▀▀░█▀▀░█▀▀  |
#   |  ░▀▀█░█▀▀░░█░░█░█░█▀▀░░░░█░░░█▀▀░█░█  |
#   |  ░▀▀▀░▀▀▀░░▀░░▀▀▀░▀░░░▀░░▀▀▀░▀░░░▀▀▀  |
#   #-------------------------------------- #
#   Website: https://commonlib.zandercraft.ca
#   Documentation: https://github.com/Zandercraft/ZCSCommonLibrary/wiki/
#   License: Mozilla Public License 2.0
#   # -------------------------------------------------------------------------------- #
#   * setup.cfg file for zcscommonlib. Sets some attributes for certain services.      *
#   # -------------------------------------------------------------------------------- #

[metadata]
description-file = README.md